# ecommerceVASSOURAS

./: ORDERS_SYSTEM.md  README.md  next.config.js  next.config.ts  package-lock.json  package.json
backend/: Dockerfile  README.md  alembic.ini  docker-compose.yml  ecommerce-api.postman_collection.json  pyproject.toml
backend/app/: main.py  tasks.py  worker.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  cart.py  categories.py  orders.py  products.py  users.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: cart.py  category.py  order.py  product.py  user.py
backend/app/repositories/: base.py  cart.py  category.py  order.py  product.py  user.py
backend/app/schemas/: cart.py  category.py  order.py  product.py  user.py
backend/app/services/: cart.py  category.py  order.py  product.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 20250523_021842_initial.py  20250626_164347_add_created_by_id_to_products.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py
backend/tests/api/: test_users.py
docs/: api-spec.md  architecture.md  backend-first-roadmap.md  contributing.md  frontend-first-roadmap.md  installation-guide.md  test-plan.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/cart/: page.tsx
src/app/checkout/: page.tsx
src/app/login/: page.tsx
src/hooks/: useCart.ts
src/lib/: api.ts  utils.ts
src/services/: axiosService.ts
src/store/: auth-store.ts  cart-store.ts
src/types/: index.ts
(+20 files in other folders)
